sqlite 3.34 changed it's open semantics, causing nss failures.
Categories
(NSS :: Libraries, defect)
Tracking
(Not tracked)
People
(Reporter: rrelyea, Assigned: rrelyea)
References
Details
Attachments
(2 files)
839 bytes,
patch
|
Details | Diff | Splinter Review | |
48 bytes,
text/x-phabricator-request
|
Details | Review |
https://sqlite.org/forum/info/42cf8e985bb051a2
sqlite is now permissive on opening a readonly file even if you ask for the file to be opened R/W.
normally sqlite is very conservative in changing it's underlying semantics, but evidently they chose convience over compatibility. NSS now needs to check the file permissions itself to preserve nss semantics.
The attached patch is for reference I'll attach a phabricator version for review.
Assignee | ||
Comment 1•2 years ago
|
||
This should be the last of the rebase patches. I missed this one originally because it was only in fedora and rhel-9. It's not critical until more people start using nss with sqlite 3.44.
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 2•2 years ago
|
||
https://sqlite.org/forum/info/42cf8e985bb051a2
sqlite is now permissive on opening a readonly file even if you ask for the file to be opened R/W.
normally sqlite is very conservative in changing it's underlying semantics, but evidently they chose convience over compatibility. NSS now needs to check the file permissions itself to preserve nss semantics.
Comment 3•2 years ago
|
||
Updated•2 years ago
|
Comment 4•2 years ago
|
||
Description
•