Bug 1721476 sqlite 3.34 changed it's open semantics, causing nss failures.

https://sqlite.org/forum/info/42cf8e985bb051a2

sqlite is now permissive on opening a readonly file even if you ask for the file to be opened R/W.

normally sqlite is very conservative in changing it's underlying semantics, but evidently they chose convience over compatibility. NSS now needs to check the file permissions itself to preserve nss semantics.

Differential Revision: https://phabricator.services.mozilla.com/D120406

--HG--
extra : rebase_source : 531e6b8a7885ffd4906a4e785c4aaffc5d7a372e